fixed travis scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,5 @@ before_script:
 script:
   - yarn package-ci
   - yarn lint
-  - yarn ts
+  - yarn tsc
   - yarn test
-  - yarn build-e2e
-  - yarn test-e2e
