--- a/src/package.json
+++ b/src/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "electron-react-boilerplate",
-  "productName": "electron-react-boilerplate",
-  "version": "2.3.0",
-  "description": "Electron application boilerplate based on React, React Router, Webpack, React Hot Loader for rapid application development",
+  "name": "electron-foundation",
+  "productName": "ElectronFoundation",
+  "version": "0.0.0",
+  "description": "An opinionated boilerplate for an express app written with React and TypeScript",
   "main": "./main.prod.js",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "Noah B Johnson",
+    "email": "noah@noahbjohnson.net",
+    "url": "https://github.com/nohbjohnson"
   },
   "scripts": {
     "electron-rebuild": "node -r ../.erb/scripts/BabelRegister.js ../.erb/scripts/ElectronRebuild.js",
