--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
       "hardenedRuntime": true,
       "entitlements": "assets/entitlements.mac.plist",
       "entitlementsInherit": "assets/entitlements.mac.plist",
-      "gatekeeperAssess": true
+      "gatekeeperAssess": false
     },
     "dmg": {
       "contents": [
