--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-11]
+        os: [macos-latest]
 
     steps:
       - name: Checkout git repo
