--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "publish": {
       "provider": "github",
       "owner": "noahbjohnson",
-      "repo": "electron-foundation"
+      "repo": "electron-foundation",
+      "releaseType": "prerelease"
     }
   },
   "repository": {
