--- a/package.json
+++ b/package.json
@@ -231,6 +231,9 @@
     "webpack-merge": "^5.4.0",
     "yarn-deduplicate": "^3.1.0"
   },
+  "resolutions": {
+    "@types/react": "^16.9.44"
+  },
   "dependencies": {
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
