--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "cross-env NODE_ENV=development eslint . --cache --ext .js,.jsx,.ts,.tsx",
     "package": "rm -rf src/dist && yarn build && electron-builder build --publish never",
     "postinstall": "node -r @babel/register .erb/scripts/CheckNativeDep.js && electron-builder install-app-deps && yarn cross-env NODE_ENV=development webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.babel.js && opencollective-postinstall && yarn-deduplicate yarn.lock",
-    "start": "node -r @babel/register ./.erb/scripts/CheckPortInUse.js && yarn start:renderer",
+    "start": "node -r @babel/register ./.erb/scripts/CheckPortInUse.js && cross-env yarn start:renderer",
     "start:main": "cross-env NODE_ENV=development electron -r ./.erb/scripts/BabelRegister ./src/main.dev.ts",
     "start:renderer": "cross-env NODE_ENV=development webpack serve --config ./.erb/configs/webpack.config.renderer.dev.babel.js",
     "test": "jest"
@@ -185,7 +185,7 @@
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
     "detect-port": "^1.3.0",
-    "electron": "^13.1.2",
+    "electron": "^11.4.8",
     "electron-builder": "^22.11.7",
     "electron-devtools-installer": "^3.1.1",
     "electron-notarize": "^1.0.0",
@@ -242,10 +242,13 @@
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19"
   },
+  "resolutions": {
+    "@types/react": "^16.9.44"
+  },
   "devEngines": {
-    "node": ">=14.x",
-    "npm": ">=6.x",
-    "yarn": ">=1.21.3"
+    "node": ">=16.x",
+    "npm": ">=7.x",
+    "yarn": ">=1.22.10"
   },
   "browserslist": [],
   "prettier": {
