--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "publish": {
       "provider": "github",
       "owner": "noahbjohnson",
-      "repo": "electron-foundation"
+      "repo": "electron-foundation",
+      "releaseType": "prerelease"
     }
   },
   "repository": {
@@ -133,6 +134,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/eslint-parser": "^7.14.5",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-decorators": "^7.12.1",
     "@babel/plugin-proposal-do-expressions": "^7.12.1",
@@ -163,15 +165,14 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "4.7.6",
     "@types/jest": "^26.0.15",
-    "@types/node": "14.14.10",
+    "@types/node": "15.12.4",
     "@types/react": "^16.9.44",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/react-dom": "^16.9.13",
+    "@types/react-router-dom": "^5.1.7",
     "@types/react-test-renderer": "^16.9.3",
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-dev-expression": "^0.2.2",
@@ -184,8 +185,8 @@
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
     "detect-port": "^1.3.0",
-    "electron": "^11.0.1",
-    "electron-builder": "^22.10.5",
+    "electron": "^11.4.8",
+    "electron-builder": "^22.11.7",
     "electron-devtools-installer": "^3.1.1",
     "electron-notarize": "^1.0.0",
     "electron-rebuild": "^2.3.2",
@@ -212,21 +213,21 @@
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^1.3.1",
-    "node-sass": "^6.0.0",
     "opencollective-postinstall": "^2.0.3",
     "prettier": "^2.0.5",
     "react-refresh": "^0.9.0",
     "react-test-renderer": "^17.0.1",
     "rimraf": "^3.0.0",
+    "sass": "^1.35.1",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
     "typescript": "^4.0.5",
     "url-loader": "^4.1.0",
-    "webpack": "^5.5.1",
+    "webpack": "^5.39.1",
     "webpack-bundle-analyzer": "^4.1.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.4.0",
     "yarn-deduplicate": "^3.1.0"
   },
@@ -241,10 +242,13 @@
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19"
   },
+  "resolutions": {
+    "@types/react": "^16.9.44"
+  },
   "devEngines": {
-    "node": ">=14.x",
-    "npm": ">=6.x",
-    "yarn": ">=1.21.3"
+    "node": ">=16.x",
+    "npm": ">=7.x",
+    "yarn": ">=1.22.10"
   },
   "browserslist": [],
   "prettier": {
